--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,15 @@ author:
   name: Bhavesh Prajapati
   title: Professional Magento Developer
   address: Surat, Gujarat, India
-  email: bhaveshpp11@mail.com
+  email: bhaveshp.magento@gmail.com
   link: https://bhaveshpp.github.io
-  weibo:
+  skype: live:bhaveshpp11
+  skypeurl: https://join.skype.com/invite/wBzrwCc2PXcJ
   github: bhaveshpp
   linkedin: bhavesh-prajapati-576a97171
   twitter: bhaveshpp111
   gavatar: /assets/img/avatar.JPG
-  stackoverflow:
+  magento.stackexchange: 70292
 #  stackoverflow: 70292
   workHistory:
     - work4:
