--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Bhavesh Prajapati 
 description: Bhavesh Prajapati
-favicon: /assets/img/avatar.JPG
+favicon: /assets/img/favicon.ico
 baseurl: https://bhaveshpp.github.io
 url: https://bhaveshpp.github.io
 rss_url: /pages/atom.xml
