--- a/_config.yml
+++ b/_config.yml
@@ -42,31 +42,21 @@ author:
       title: Magento Developer
       started: Sep 2020
       duration: (2020 - 2021)
-      description: `
-      Here, I have started work as Sr. Web and Adobe Ecommerce (Magento) Developer.
-I have worked on magento2, magento1, codeignitor, and also on core PHP projects and learned many things in my profession and personal life also. I am grateful to my team leader and colleagues for growing me up.
-      `
+      description: Here, I have started work as Sr. Web and Adobe Ecommerce (Magento) Developer. I have worked on magento2, magento1, codeignitor, and also on core PHP projects and learned many things in my profession and personal life also. I am grateful to my team leader and colleagues for growing me up.
     - work2:
       company: Aureate Labs Pvt. Ltd.
       location: Surat, Gujarat
       title: Magento Developer
       started: june 2020
       duration: (2020 - 2020)
-      description: `
-      Here I have started work as an Adobe commerce developer (Magento developer).
-And Learn many new technology and working standards under experienced developers. and work with the trained team and improve my skills and work performance.
-      `
+      description: Here I have started work as an Adobe commerce developer (Magento developer). And Learn many new technology and working standards under experienced developers. and work with the trained team and improve my skills and work performance.
     - work1:
       company: Cirkle Studio
       location: Surat, Gujarat
       title: Jr. Magento Developer
       started: June 2018
       duration: (2018 - 2020)
-      description: ` 
-        Start training and work as Jr. Magento Developer
-After completing my bachelor's degree I have started training and my master's as literal.
-Here I have started my journey as a web developer, After completing my training I have started working on Magento1 and Magento2 as a junior Magento developer under an experienced development team.
-      `
+      description: Start training and work as Jr. Magento Developer. After completing my bachelor's degree I have started training and my master's as literal. Here I have started my journey as a web developer, After completing my training I have started working on Magento1 and Magento2 as a junior Magento developer under an experienced development team.
 
   educationHistory:
     - education1:
