--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   linkedin: bhavesh-prajapati-576a97171
   twitter: bhaveshpp111
   gavatar: /assets/img/avatar.JPG
-  magento.stackexchange: 70292
+  magento_stackexchange: 70292
 #  stackoverflow: 70292
   workHistory:
     - work4:
