--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ exclude: [vendor]
 # Author settings
 author:
   name: Bhavesh Prajapati
-  title: Professional Magento Developer
+  title: Professional full stack Developer (E commerce web developer)
   address: Surat, Gujarat, India
   email: bhaveshp.magento@gmail.com
   link: https://bhaveshpp.github.io
