--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: /assets/img/favicon.ico
 baseurl: https://bhaveshpp.github.io
 url: https://bhaveshpp.github.io
 rss_url: /pages/atom.xml
-google_analytics: UA-63653234-1
+google_analytics: G-EJMV7MMWDX
 
 # Build settings
 markdown: kramdown
