--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ author:
   github: bhaveshpp
   linkedin: bhavesh-prajapati-576a97171
   twitter: bhaveshpp111
+  codepen: bhaveshpp
   gavatar: /assets/img/avatar.JPG
   magento_stackexchange: 70292
 #  stackoverflow: 70292
