--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ author:
   linkedin: bhavesh-prajapati-576a97171
   twitter: bhaveshpp111
   codepen: bhaveshpp
+  upwork: 019837fb6268595b09
   gavatar: /assets/img/avatar.JPG
   magento_stackexchange: 70292
 #  stackoverflow: 70292
