--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ author:
       started: 2023
       duration: (2023 - current)
       description: With Intellipaat
-      collegeLogo: /assets/img/roorkee.png
+      collegeLogo: /assets/img/roorkee.jpg
       universityLogo: 
     - education2:
       organization: Intellipaat Online Training
